--- a/package.json
+++ b/package.json
@@ -14,8 +14,7 @@
   },
   "devDependencies": {
     "npm-run-all": "1.5.0",
-    "webpack": "1.12.11",
-    "webpack-dev-server": "1.14.1",
+    "rimraf": "2.5.2",
     "file-loader": "0.8.5",
     "css-loader": "0.23.1",
     "style-loader": "0.13.0",
@@ -25,8 +24,11 @@
     "babel-runtime": "6.3.19",
     "babel-loader": "6.2.1",
     "babel-preset-es2015": "6.3.13",
+    "babel-plugin-add-module-exports": "0.1.2",
     "html-loader": "0.4.3",
     "html-webpack-plugin": "2.7.1",
+    "webpack": "1.12.11",
+    "webpack-dev-server": "1.14.1",
     "grunt": "0.4.5",
     "grunt-cli": "0.1.13",
     "grunt-extend-config": "0.9.3",
@@ -48,7 +50,7 @@
     "jasmine-core": "2.4.1",
     "phantomjs": "1.9.19",
     "phantomjs-polyfill": "0.0.1",
-    "istanbul-instrumenter-loader": "0.1.3",
+    "isparta-instrumenter-loader": "1.0.0",
     "protractor": "3.1.1",
     "jasmine-reporters": "2.1.1",
     "jasmine-spec-reporter": "2.4.0",
@@ -62,11 +64,15 @@
     "lodash": "3.10.1",
     "extract-text-webpack-plugin": "1.0.1"
   },
-  "config": {},
   "scripts": {
+    "start": "npm run dev",
+    "dev": "npm-run-all clean:dev verify --parallel verify:watch build:dev serve:dev",
+    "build": "npm-run-all clean:prod build:prod",
+    "build:serve": "npm-run-all build serve:prod",
+    "clean:dev": "rimraf dev/",
+    "clean:prod": "rimraf dist/",
     "build:dev": "webpack-dev-server --progress --config config/webpack/dev.webpack.config.js --hot",
     "build:prod": "webpack -p --progress --config config/webpack/prod.webpack.config.js",
-    "serve:dev": "echo",
     "serve:prod": "grunt connect:prod",
     "test": "npm run test:unit",
     "test:unit": "karma start ./config/testUnit/karma.conf.js",
@@ -74,12 +80,6 @@
     "test:unit:debug": "karma start ./config/testUnit/karma.debug.conf.js",
     "test:browser": "protractor config/testBrowser/protractor.conf.js",
     "verify": "grunt verify",
-    "verify:watch": "grunt watch:verify",
-    "start": "npm run dev",
-    "dev": "npm-run-all clean:dev verify --parallel verify:watch build:dev serve:dev",
-    "build": "npm-run-all clean:prod build:prod",
-    "build:serve": "npm-run-all build serve:prod",
-    "clean:dev": "rm -rf dev/",
-    "clean:prod": "rm -rf dist/"
+    "verify:watch": "grunt watch:verify"
   }
 }
