--- a/ES6_NG1_STYLUS_AIRBNB/package.json
+++ b/ES6_NG1_STYLUS_AIRBNB/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "sample-app",
+  "name": "es-6-ng-1-stylus-airbnb",
   "description": "A description of my awesome package",
   "version": "0.0.0",
   "repository": {
@@ -9,17 +9,21 @@
   "license": "UNLICENSED",
   "private": true,
   "dependencies": {
-    "angular": "1.4.9",
     "angular-route": "1.4.9"
   },
   "devDependencies": {
     "npm-run-all": "1.5.0",
     "rimraf": "2.5.2",
+    "grunt": "0.4.5",
+    "grunt-cli": "0.1.13",
+    "grunt-extend-config": "0.9.3",
+    "load-grunt-tasks": "3.4.0",
     "file-loader": "0.8.5",
     "css-loader": "0.23.1",
     "style-loader": "0.13.0",
     "autoprefixer-loader": "3.2.0",
     "stylus-loader": "1.4.3",
+    "angular": "1.4.9",
     "babel-core": "6.4.5",
     "babel-runtime": "6.3.19",
     "babel-loader": "6.2.1",
@@ -29,10 +33,7 @@
     "html-webpack-plugin": "2.7.1",
     "webpack": "1.12.11",
     "webpack-dev-server": "1.14.1",
-    "grunt": "0.4.5",
-    "grunt-cli": "0.1.13",
-    "grunt-extend-config": "0.9.3",
-    "load-grunt-tasks": "3.4.0",
+    "lodash": "3.10.1",
     "grunt-contrib-watch": "0.6.1",
     "grunt-contrib-connect": "0.11.2",
     "angular-mocks": "1.4.9",
@@ -61,7 +62,7 @@
     "grunt-newer": "1.1.1",
     "grunt-stylint": "0.1.2",
     "grunt-eslint": "17.3.1",
-    "lodash": "3.10.1",
+    "cz-customizable": "3.1.0",
     "extract-text-webpack-plugin": "1.0.1"
   },
   "scripts": {
@@ -80,6 +81,15 @@
     "test:unit:debug": "karma start ./config/testUnit/karma.debug.conf.js",
     "test:browser": "protractor config/testBrowser/protractor.conf.js",
     "verify": "grunt verify",
-    "verify:watch": "grunt watch:verify"
+    "verify:watch": "grunt watch:verify",
+    "release": "npm-run-all build verify test:unit:once"
+  },
+  "config": {
+    "commitizen": {
+      "path": "node_modules/cz-customizable"
+    },
+    "cz-customizable": {
+      "config": "config/release/commitMessageConfig.js"
+    }
   }
 }
