--- a/TS_NG2_STYLUS/package.json
+++ b/TS_NG2_STYLUS/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "es-6-ng-1-stylus-airbnb",
+  "name": "ts-ng-2-stylus",
   "version": "0.0.0",
   "description": "A description of my awesome package",
   "license": "UNLICENSED",
@@ -23,6 +23,7 @@
     "test:unit": "karma start ./config/testUnit/karma.conf.js",
     "test:unit:debug": "karma start ./config/testUnit/karma.conf.js --debug",
     "test:unit:once": "karma start --singleRun=true ./config/testUnit/karma.conf.js",
+    "typings:install": "typings install",
     "verify": "grunt verify",
     "verify:watch": "grunt watch:verify"
   },
@@ -38,24 +39,17 @@
     }
   },
   "dependencies": {
-    "angular": "1.5.5",
-    "angular-route": "1.5.5"
+    "angular2": "2.0.0-beta.17",
+    "core-js": "2.3.0",
+    "rxjs": "5.0.0-beta.7",
+    "zone.js": "0.6.12"
   },
   "devDependencies": {
-    "angular-mocks": "1.5.5",
     "autoprefixer": "6.3.6",
-    "babel-core": "6.4.5",
-    "babel-eslint": "4.1.8",
-    "babel-loader": "6.2.1",
-    "babel-plugin-add-module-exports": "0.1.2",
-    "babel-preset-es2015": "6.3.13",
-    "babel-runtime": "6.3.19",
+    "awesome-typescript-loader": "0.17.0",
     "css-loader": "0.23.1",
     "cz-customizable": "4.0.0",
     "cz-customizable-ghooks": "1.1.0",
-    "eslint": "1.10.3",
-    "eslint-config-defaults": "8.0.2",
-    "eslint-plugin-react": "3.16.1",
     "extract-text-webpack-plugin": "1.0.1",
     "file-loader": "0.8.5",
     "ghooks": "1.2.1",
@@ -63,13 +57,13 @@
     "grunt-cli": "0.1.13",
     "grunt-contrib-connect": "0.11.2",
     "grunt-contrib-watch": "0.6.1",
-    "grunt-eslint": "17.3.1",
     "grunt-extend-config": "0.9.3",
     "grunt-newer": "1.1.1",
     "grunt-stylint": "0.1.2",
+    "grunt-tslint": "3.0.2",
     "html-loader": "0.4.3",
     "html-webpack-plugin": "2.7.1",
-    "isparta-instrumenter-loader": "1.0.0",
+    "istanbul-instrumenter-loader": "0.2.0",
     "jasmine-core": "2.4.1",
     "jasmine-reporters": "2.1.1",
     "jasmine-spec-reporter": "2.4.0",
@@ -94,6 +88,9 @@
     "rimraf": "2.5.2",
     "style-loader": "0.13.0",
     "stylus-loader": "1.4.3",
+    "ts-helpers": "1.1.1",
+    "tslint": "3.8.1",
+    "typescript": "1.8.9",
     "webpack": "1.12.11",
     "webpack-dev-server": "1.14.1"
   },
