--- a/ES6_NG1_STYLUS_AIRBNB/package.json
+++ b/ES6_NG1_STYLUS_AIRBNB/package.json
@@ -16,15 +16,22 @@
     "clean:prod": "rimraf dist/",
     "dev": "npm-run-all clean:dev verify --parallel verify:watch build:dev serve:dev",
     "release": "npm-run-all build verify test:unit:once",
-    "serve:prod": "grunt connect:prod",
+    "serve:dev": "echo Starting DEV server",
+    "serve:prod": "npm run serve:prod:https",
+    "serve:prod:http": "serve -C -p 3000 dist/",
+    "serve:prod:https": "serve-https -p 3000 -d dist/ --servername localhost",
     "start": "npm run dev",
     "test": "npm run test:unit",
     "test:browser": "protractor config/testBrowser/protractor.conf.js",
     "test:unit": "karma start ./config/testUnit/karma.conf.js",
     "test:unit:debug": "karma start ./config/testUnit/karma.conf.js --debug",
     "test:unit:once": "karma start --singleRun=true ./config/testUnit/karma.conf.js",
-    "verify": "grunt verify",
-    "verify:watch": "grunt watch:verify"
+    "verify": "npm-run-all verify:css verify:js --silent",
+    "verify:css": "stylint -c config/verify/.stylintrc src/",
+    "verify:css:watch": "chokidar 'src/**/*.styl' -c 'npm run verify:css' --initial --silent",
+    "verify:js": "eslint -c config/verify/.eslintrc \"src/**/*.js\" \"unitTest/**/*.js\" \"config/**/*.js\"",
+    "verify:js:watch": "chokidar 'src/**/*.js' 'unitTest/**/*.js' 'config/**/*.js' -c 'npm run verify:js' --initial --silent",
+    "verify:watch": "npm-run-all --parallel verify:css:watch verify:js:watch --silent"
   },
   "config": {
     "commitizen": {
@@ -50,23 +57,16 @@
     "babel-plugin-add-module-exports": "0.1.2",
     "babel-preset-es2015": "6.3.13",
     "babel-runtime": "6.3.19",
+    "chokidar-cli": "1.2.0",
     "css-loader": "0.23.1",
     "cz-customizable": "4.0.0",
-    "cz-customizable-ghooks": "1.1.0",
+    "cz-customizable-ghooks": "1.1.2",
     "eslint": "1.10.3",
     "eslint-config-defaults": "8.0.2",
     "eslint-plugin-react": "3.16.1",
     "extract-text-webpack-plugin": "1.0.1",
     "file-loader": "0.8.5",
     "ghooks": "1.2.1",
-    "grunt": "0.4.5",
-    "grunt-cli": "0.1.13",
-    "grunt-contrib-connect": "0.11.2",
-    "grunt-contrib-watch": "0.6.1",
-    "grunt-eslint": "17.3.1",
-    "grunt-extend-config": "0.9.3",
-    "grunt-newer": "1.1.1",
-    "grunt-stylint": "0.1.2",
     "html-loader": "0.4.3",
     "html-webpack-plugin": "2.7.1",
     "isparta-instrumenter-loader": "1.0.0",
@@ -84,16 +84,19 @@
     "karma-spec-reporter": "0.0.23",
     "karma-threshold-reporter": "0.1.15",
     "karma-webpack": "1.7.0",
-    "load-grunt-tasks": "3.4.0",
     "lodash": "3.10.1",
-    "npm-run-all": "1.5.0",
+    "npm-run-all": "2.1.1",
     "phantomjs-polyfill": "0.0.2",
     "phantomjs-prebuilt": "2.1.7",
     "postcss-loader": "0.8.2",
     "protractor": "3.2.1",
     "rimraf": "2.5.2",
+    "serve": "1.4.0",
+    "serve-https": "1.5.3",
     "style-loader": "0.13.0",
-    "stylus-loader": "1.4.3",
+    "stylint": "1.5.6",
+    "stylus": "0.54.5",
+    "stylus-loader": "2.1.1",
     "webpack": "1.12.11",
     "webpack-dev-server": "1.14.1"
   },
