--- a/TS_NG2_STYLUS/package.json
+++ b/TS_NG2_STYLUS/package.json
@@ -16,7 +16,10 @@
     "clean:prod": "rimraf dist/",
     "dev": "npm-run-all clean:dev verify --parallel verify:watch build:dev serve:dev",
     "release": "npm-run-all build verify test:unit:once",
-    "serve:prod": "grunt connect:prod",
+    "serve:dev": "echo Starting DEV server",
+    "serve:prod": "npm run serve:prod:https",
+    "serve:prod:http": "serve -C -p 3000 dist/",
+    "serve:prod:https": "serve-https -p 3000 -d dist/ --servername localhost",
     "start": "npm run dev",
     "test": "npm run test:unit",
     "test:browser": "protractor config/testBrowser/protractor.conf.js",
@@ -24,8 +27,12 @@
     "test:unit:debug": "karma start ./config/testUnit/karma.conf.js --debug",
     "test:unit:once": "karma start --singleRun=true ./config/testUnit/karma.conf.js",
     "typings:install": "typings install",
-    "verify": "grunt verify",
-    "verify:watch": "grunt watch:verify"
+    "verify": "npm-run-all verify:css verify:js --silent",
+    "verify:css": "stylint -c config/verify/.stylintrc src/",
+    "verify:css:watch": "chokidar 'src/**/*.styl' -c 'npm run verify:css' --initial --silent",
+    "verify:js": "tslint -c config/verify/tslint.json \"src/**/*.ts\" \"unitTest/**/*.ts\" \"config/**/*.ts\"",
+    "verify:js:watch": "chokidar 'src/**/*.ts' 'unitTest/**/*.ts' 'config/**/*.ts' -c 'npm run verify:js' --initial --silent",
+    "verify:watch": "npm-run-all --parallel verify:css:watch verify:js:watch --silent"
   },
   "config": {
     "commitizen": {
@@ -35,7 +42,8 @@
       "config": "config/release/commitMessageConfig.js"
     },
     "ghooks": {
-      "commit-msg": "./node_modules/cz-customizable-ghooks/index.js $2"
+      "commit-msg": "./node_modules/cz-customizable-ghooks/index.js $2",
+      "pre-push": "npm-run-all verify test:unit:once --silent"
     }
   },
   "dependencies": {
@@ -47,20 +55,13 @@
   "devDependencies": {
     "autoprefixer": "6.3.6",
     "awesome-typescript-loader": "0.17.0",
+    "chokidar-cli": "1.2.0",
     "css-loader": "0.23.1",
     "cz-customizable": "4.0.0",
-    "cz-customizable-ghooks": "1.1.0",
+    "cz-customizable-ghooks": "1.1.2",
     "extract-text-webpack-plugin": "1.0.1",
     "file-loader": "0.8.5",
     "ghooks": "1.2.1",
-    "grunt": "0.4.5",
-    "grunt-cli": "0.1.13",
-    "grunt-contrib-connect": "0.11.2",
-    "grunt-contrib-watch": "0.6.1",
-    "grunt-extend-config": "0.9.3",
-    "grunt-newer": "1.1.1",
-    "grunt-stylint": "0.1.2",
-    "grunt-tslint": "3.0.2",
     "html-loader": "0.4.3",
     "html-webpack-plugin": "2.7.1",
     "istanbul-instrumenter-loader": "0.2.0",
@@ -78,16 +79,19 @@
     "karma-spec-reporter": "0.0.23",
     "karma-threshold-reporter": "0.1.15",
     "karma-webpack": "1.7.0",
-    "load-grunt-tasks": "3.4.0",
     "lodash": "3.10.1",
-    "npm-run-all": "1.5.0",
+    "npm-run-all": "2.1.1",
     "phantomjs-polyfill": "0.0.2",
     "phantomjs-prebuilt": "2.1.7",
     "postcss-loader": "0.8.2",
     "protractor": "3.2.1",
     "rimraf": "2.5.2",
+    "serve": "1.4.0",
+    "serve-https": "1.5.3",
     "style-loader": "0.13.0",
-    "stylus-loader": "1.4.3",
+    "stylint": "1.5.6",
+    "stylus": "0.54.5",
+    "stylus-loader": "2.1.1",
     "ts-helpers": "1.1.1",
     "tslint": "3.8.1",
     "typescript": "1.8.9",
