--- a/TS_NG2_STYLUS/docs/swanky.config.yaml
+++ b/TS_NG2_STYLUS/docs/swanky.config.yaml
@@ -1,6 +1,6 @@
 # START_CONFIT_GENERATED_CONTENT
 title: ts-ng-2-stylus
-repo: https://example.com/entity/repo
+repo: https://github.com/entity/repo
 version: 0.0.0
 src: docs
 output: webdocs
