--- a/ES6_NG1_STYLUS_AIRBNB/docs/swanky.config.yaml
+++ b/ES6_NG1_STYLUS_AIRBNB/docs/swanky.config.yaml
@@ -1,6 +1,6 @@
 # START_CONFIT_GENERATED_CONTENT
 title: es-6-ng-1-stylus-airbnb
-repo: https://example.com/entity/repo
+repo: https://github.com/entity/repo
 version: 0.0.0
 src: docs
 output: webdocs
