--- a/ES6_NG1_STYLUS_AIRBNB/package.json
+++ b/ES6_NG1_STYLUS_AIRBNB/package.json
@@ -5,15 +5,15 @@
   "license": "MIT",
   "repository": {
     "type": "git",
-    "url": "https://example.com/entity/repo"
+    "url": "https://github.com/entity/repo"
   },
   "scripts": {
     "pre-release": "npm-run-all verify test:coverage build test:system",
-    "build": "cross-env NODE_ENV=production npm-run-all clean:prod build:stats",
+    "build": "cross-env NODE_ENV=production npm-run-all clean:prod build:prod",
     "build:dev": "webpack-dev-server --progress --config config/webpack/dev.webpack.config.js --hot",
     "build:prod": "webpack -p --progress --config config/webpack/prod.webpack.config.js",
-    "build:stats": "webpack -p --progress --config config/webpack/prod.webpack.config.js -j > stats.json",
     "build:serve": "npm-run-all build serve:prod",
+    "build:stats": "webpack -p --progress --config config/webpack/prod.webpack.config.js -j > stats.json",
     "clean:dev": "rimraf dev/",
     "clean:prod": "rimraf dist/",
     "dev": "cross-env NODE_ENV=development npm-run-all clean:dev --parallel verify:watch build:dev serve:dev",
