--- a/TS_NG2_STYLUS/confit.yml
+++ b/TS_NG2_STYLUS/confit.yml
@@ -100,6 +100,7 @@ generator-confit:
       - core-js/es7/reflect
       - zone.js/dist/zone
       - ts-helpers
+      - '@angular/router'
   buildHTML:
     _version: fa5101f43e6788985cc4b61b0f8a9f829f8c9524
     extension: .html
